--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
     max-width: 1000px;
     margin: 0px auto;
 }
-
 .enlace_cero{
     color: initial;
     text-decoration: none;
@@ -39,7 +38,7 @@ h1{
     text-align: center;
 }
 
-#s1{
+.sec_preguntas{
     width: 85vw;
     max-width: 800px;
     margin: 0px auto;
