--- a/style.css
+++ b/style.css
@@ -16,24 +16,6 @@ body{
     text-decoration: none;
 }
 
-
-
-/* RESULTADO */
-#cuadro_resultado{
-    width: 100px;
-    border: 1px solid black;
-}
-
-#cuadro_resultado > p {
-    margin: 5px 14px;
-}
-#s_rec{
-    margin: 30px;
-}
-
-
-
-
 h1{
     text-align: center;
 }
@@ -109,12 +91,41 @@ input{
     margin: 0px auto;
     height: 35vh;
 }
-
-
-
 #contenedor_intro{
     background-color: rgb(220, 248, 248);
     padding: 10px 20px;
     margin: 20px;
 }
 
+
+/* RESULTADO */
+#cuadro_resultado{
+    width: 100%;
+    max-width: 700px;
+    background-color:rgb(220, 248, 248) ;
+    margin: 20px auto;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#s_rec{
+    margin: 30px;
+}
+#contenedor_grafico{
+    max-width: 500px;
+    height: 230px;
+    margin: 0px auto;
+}
+ul{
+    margin: 20px;
+}
+h4{
+    margin:0px 0px 10px;
+    text-align: center;
+}
+h5{
+    margin: 0px 0px 15px;
+    font-style: italic;
+    text-align: center;
+}
